tao monad working

--- a/.env
+++ b/.env
@@ -1,8 +1,17 @@
-INFURA_KEY=895643951288464980a811581d21c752
-ALCHEMY_KEY=your_alchemy_key_here
+# Required API Keys
+INFURA_KEY=895643951288464980a811581d21c752  # Required for Ethereum and Base RPC
+
+# Block Explorer API Keys
 ETHERSCAN_API_KEY=C1IC1FR2VNVWMTQ2A44EP8VW59XQVV3D74
 BASESCAN_API_KEY=JGWYXQD91YHXGTNJBGC5PWH985KW636I77
+
+# The Graph API Keys
 THEGRAPH_API_KEY=bf4dd75c5d0c92cba6e0ca8a534f5a31
+
+# Subgraph IDs
 AAVE_V3_SUBGRAPH_ID=JCNWRypm7FYwV8fx5HhzZPSFaMxgkPuw4TnR3Gpi81zk
 COMPOUND_V2_SUBGRAPH_ID=AwoxEZbiWLvv6e3QdvdMZw4WDURdGbvPfHmZRc8Dpfz9
 PENDLE_CORE_SUBGRAPH_ID=ExXGU3ub2nrT5stPk5cH4hSk2qunJcMcP8eX5GAhrZhe
+
+# Optional: Alchemy API Key (if needed for additional services)
+ALCHEMY_KEY=your_alchemy_key_here
