--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # Required API Keys
+ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/${INFURA_KEY}
 INFURA_KEY=895643951288464980a811581d21c752  # Required for Ethereum and Base RPC
 
 # Block Explorer API Keys
